@@ -1,3 +1,7 @@
+2010-08-04  Sam Steingold  <sds@gnu.org>
+
+	* array.d (elt_reverse): use SIMPLE_REVERSE for strings too
+
 2010-08-02  Bruno Haible  <bruno@clisp.org>
 
 	* realelem.d (ffloat_uint32_equal, dfloat_uint32_equal): New functions.
